# visionary

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icons.mjs  release.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: compress.rs  mod.rs  resize.rs  utils.rs
src/components/: DropZone.tsx  TabBar.tsx  Toggle.tsx
src/components/about/: AboutTab.tsx
src/components/compress/: CompressTab.tsx  FileList.tsx
src/components/resize/: ResizeDimensionInput.tsx  ResizeTab.tsx
src/components/svg/: SvgPreview.tsx  SvgStats.tsx  SvgTab.tsx
src/hooks/: useDragDrop.ts
src/lib/: svgo.ts
