[package]
name = "visionary"
version = "0.2.3"
description = "Visionary — image & SVG tools for web developers"
authors = []
edition = "2021"

[lib]
name = "visionary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "avif"] }
webp        = "0.3"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
